base/rollout-steps.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: canary-demo
spec:
  strategy:
    canary:
      steps:
        - setWeight: 20
        - pause:
            duration: 5
        - setWeight: 80
        - pause:
            duration: 5
