base/remove-ingress-demo-preview.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-demo-preview
$patch: delete
